--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <figure>
             <img src="./assets/images/logo.png" alt="LOGO">
         </figure>
-        <div><input type="text" name="serch" placeholder="Search">
+        <div class="serch-bar"><input type="text" name="serch" placeholder="Search">
         <i class="fa-solid fa-magnifying-glass"></i></div>
         <ul>
             <li><a href="#">Home</a></li>
@@ -23,6 +23,19 @@
         </ul>
 
     </nav>
+    <!-- End of nav section -->
+     <!-- start of banner section -->
+    <section class="banner">
+       <div>
+        <h1>Mi LED TV 4A PRO 32</h1>
+        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        <h2>$1289</h2>
+        <button>BUY NOW<i class="fa-solid fa-arrow-right"></i></button>
+       </div>
+       <div>
+        <figure><img src="./assets/images/banner-images/tv.png" alt="TV"></figure>
+       </div>
+    </section>
    </main>
 </body>
 </html>
